<resources>

    <string name="app_name">DuellerTest</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Name</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="upload_button_label">Upload</string>

    <!-- Duel Detail -->
    <string name="back">Back</string>
    <string name="VS">VS.</string>

    <string name="challenger1_label">Challenger 1</string>
    <string name="challenger2_label">Challenger 2</string>

    <string name="details">Details:</string>

    <string name="comments">Comments:</string>
    <string name="comment_placeholder">Start talking trash here...</string>
    <string name="submit">Submit</string>

    <string name="bragging_claim_label">I claim bragging rights for...</string>

    <string name="location">Location:</string>
    <string name="post">Post</string>

</resources>
