<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jessicaluu.dueller.DuelDetailsActivity"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/backButton"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/dueller_purple"
        android:elevation="5dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/back"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/challenger1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@android:string/unknownName"
                app:layout_constraintEnd_toStartOf="@+id/challenger2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/thor" />

            <TextView
                android:id="@+id/challenger1Label"
                android:layout_width="128dp"
                android:layout_height="19dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-smallcaps"
                android:labelFor="@+id/challenger1Info"
                android:text="@string/challenger1_label"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toStartOf="@+id/challenger2Label"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/challenger1" />

            <TextView
                android:id="@+id/challenger1Info"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ems="10"
                android:lines="3"
                app:layout_constraintEnd_toStartOf="@+id/challenger2Info"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/challenger1Label" />

            <TextView
                android:id="@+id/vsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/VS"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/challenger2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@android:string/unknownName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/challenger1"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/hulk" />

            <TextView
                android:id="@+id/challenger2Label"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-smallcaps"
                android:labelFor="@+id/challenger2Info"
                android:text="@string/challenger2_label"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/challenger1Label"
                app:layout_constraintTop_toBottomOf="@+id/challenger2" />

            <TextView
                android:id="@+id/challenger2Info"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ems="10"
                android:lines="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/challenger1Info"
                app:layout_constraintTop_toBottomOf="@+id/challenger2Label" />

            <View
                android:id="@+id/divider1"
                android:layout_width="350dp"
                android:layout_height="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="250dp"
                android:background="@color/dueller_purple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detailsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/details"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider1" />

            <TextView
                android:id="@+id/detailsInfo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:lines="5"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailsLabel" />

            <View
                android:id="@+id/divider2"
                android:layout_width="350dp"
                android:layout_height="2dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/dueller_purple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailsInfo" />

            <TextView
                android:id="@+id/commentsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-smallcaps"
                android:labelFor="@+id/commentsTextArea"
                android:text="@string/comments"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <EditText
                android:id="@+id/commentsTextArea"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="1dp"
                android:backgroundTint="@android:color/transparent"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:gravity="top|start"
                android:hint="@string/comment_placeholder"
                android:inputType="textMultiLine"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/commentsLabel" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginEnd="33dp"
                android:layout_marginTop="2dp"
                android:background="@color/dueller_purple"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/commentsTextArea" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
